--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ampersand-form-view": "^0.2.2",
     "ampersand-state": "^4.2.3",
     "ampersand-view-conventions": "^1.1.1",
+    "browserify": "^5.10.1",
     "function-bind": "^0.1.0",
     "jshint": "^2.5.1",
     "precommit-hook": "^1.0.2",
