--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "ampersand-dom": "^1.1.0",
-    "domify": "^1.2.2"
+    "domify": "^1.2.2",
+    "matches-selector": "^1.0.0"
   },
   "devDependencies": {
     "ampersand-collection": "^1.3.1",
@@ -22,8 +23,7 @@
     "tap-spec": "^0.2.0",
     "tape": "^2.13.3",
     "tape-run": "^0.1.1",
-    "tape-suite": "^0.2.0",
-    "matches-selector": "^1.0.0"
+    "tape-suite": "^0.2.0"
   },
   "directories": {
     "test": "test"
