--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "function-bind": "^0.1.0",
     "jshint": "^2.5.1",
     "precommit-hook": "^1.0.2",
+    "run-browser": "^1.3.1",
     "tap-spec": "^0.2.0",
     "tape": "^2.13.3",
     "tape-run": "^0.1.1",
@@ -44,7 +45,7 @@
   "scripts": {
     "test": "browserify test/* | tape-run -b phantom | tap-spec",
     "start": "run-browser test/*",
-    "demo": "beefy demo.js --cwd demo --open --live"
+    "demo": "beefy demo/demo.js:demo.js --cwd demo"
   },
   "testling": {
     "files": "test/*.js",
