--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browserify": "^5.10.1",
     "function-bind": "^0.1.0",
     "jshint": "^2.5.1",
+    "phantomjs": "^1.9.7-15",
     "precommit-hook": "^1.0.2",
     "run-browser": "^1.3.1",
     "tap-spec": "^0.2.0",
