--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ampersand-dom": "^1.1.0",
     "ampersand-version": "^1.0.1",
     "domify": "^1.2.2",
-    "matches-selector": "^1.0.0"
+    "matches-selector": "^1.0.0",
+    "zuul": "^1.16.4"
   },
   "devDependencies": {
     "ampersand-collection": "^1.3.1",
@@ -46,7 +47,8 @@
     "url": "https://github.com/AmpersandJS/ampersand-select-view.git"
   },
   "scripts": {
-    "test": "zuul -- test/index.js",
+    "test": "zuul --phantom -- test/index.js",
+    "test-ci": "zuul -- test/index.js",
     "start": "run-browser test/*",
     "demo": "beefy demo/demo.js:demo.js --cwd demo"
   },
