--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ script: npm run test-ci
 addons:
   sauce_connect:
     username: ampersandjs-ci
-    access_key: secure: "qZGwdyj62108JOiUMZjgLGCQ8k9G/Z3HDhqzxaMmFC0PgxYX6Z0IglTeYdTUWhalIzjM/WplW2iV3i0hfM8ufvLh1XVHZfFb0ZUtAi7i8fmJMHUflQ3/8E3rJGsLRn06Z+mW1nJB2aC2BgqCKlu4qhYKfTAH1/wr4sd8ZMG87vg="
+    access_key:
+      secure: "qZGwdyj62108JOiUMZjgLGCQ8k9G/Z3HDhqzxaMmFC0PgxYX6Z0IglTeYdTUWhalIzjM/WplW2iV3i0hfM8ufvLh1XVHZfFb0ZUtAi7i8fmJMHUflQ3/8E3rJGsLRn06Z+mW1nJB2aC2BgqCKlu4qhYKfTAH1/wr4sd8ZMG87vg="
