--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ampersand-select-view",
   "description": "A view module for intelligently rendering and validating selectbox input. Works well with ampersand-form-view.",
-  "version": "2.4.2",
+  "version": "3.0.0",
   "author": "Philip Roberts <phil@andyet.net>",
   "bugs": {
     "url": "https://github.com/AmpersandJS/ampersand-select-view/issues"
   },
   "dependencies": {
+    "amp-is-array": "^1.0.1",
     "ampersand-dom": "^1.1.0",
     "ampersand-version": "^1.0.1",
     "domify": "^1.2.2",
