--- a/package.json
+++ b/package.json
@@ -10,25 +10,24 @@
     "ampersand-dom": "^1.1.0",
     "ampersand-version": "^1.0.1",
     "domify": "^1.2.2",
-    "matches-selector": "^1.0.0",
-    "zuul": "^1.16.4"
+    "matches-selector": "^1.0.0"
   },
   "devDependencies": {
     "ampersand-collection": "^1.3.1",
-    "ampersand-form-view": "^0.2.2",
-    "ampersand-state": "^4.2.3",
+    "ampersand-form-view": "^2.3.0",
+    "ampersand-state": "^4.4.5",
     "ampersand-view-conventions": "^1.1.1",
-    "browserify": "^5.10.1",
-    "function-bind": "^0.1.0",
+    "browserify": "^9.0.3",
+    "function-bind": "^1.0.2",
     "jshint": "^2.5.1",
     "phantomjs": "^1.9.7-15",
     "precommit-hook": "^1.0.2",
-    "run-browser": "^1.3.1",
-    "tap-spec": "^0.2.0",
-    "tape": "^2.13.3",
-    "tape-run": "^0.1.1",
+    "run-browser": "^2.0.2",
+    "tap-spec": "^2.2.1",
+    "tape": "^3.5.0",
+    "tape-run": "^0.3.0",
     "tape-suite": "^0.2.0",
-    "zuul": "^1.13.1"
+    "zuul": "^1.19.0"
   },
   "directories": {
     "test": "test"
