--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ node_js:
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
+env:
+  global:
+  - secure: "c13p96hzp54rRtR8eU+RBmXvuLuGUpTrD8fxJaEHTuPBe0gIZzwi8CqYE3yQqrFYU0EFsBvEQiHmslLVTTUvCcCW0ae8xk61RCJyge/6InQWldmJdXawgAeqwoRanfbAMr8tVfTO6T+9iESVcIOkPgWQ3CQb6/KizTe5937BNp4="
+  - secure: "NZXIAqpE9xk/6wKeSL5LLTO0DWE2MZoJ1dP7VWXBDklWfcM4mJS6yYf2/q7nnG1T+RqKQUGF//GOv9JPFmeQxP41UNIH7GwvCfIZSZGvRqZ1xAYmlijvVMWFw6o2WTw42OFu0GFvq5Gp+2ohIdrR4U47HSA0X/+JQYyM5wYDtYs="
+
 notifications:
   webhooks:
     urls:
