--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tape": "^3.5.0",
     "tape-run": "^0.3.0",
     "tape-suite": "^0.2.0",
+    "testem": "^0.7.6",
     "zuul": "^1.19.0"
   },
   "directories": {
