--- a/package.json
+++ b/package.json
@@ -51,7 +51,11 @@
     "test": "zuul --phantom -- test/index.js",
     "test-ci": "zuul -- test/index.js",
     "start": "run-browser test/*",
-    "demo": "beefy demo/demo.js:demo.js --cwd demo"
+    "demo": "beefy demo/demo.js:demo.js --cwd demo",
+    "preversion": "git checkout master && git pull && npm ls",
+    "publish-patch": "npm run preversion && npm version patch && git push origin master --tags && npm publish",
+    "publish-minor": "npm run preversion && npm version minor && git push origin master --tags && npm publish",
+    "publish-major": "npm run preversion && npm version major && git push origin master --tags && npm publish"
   },
   "testling": {
     "files": "test/*.js",
