--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,22 @@
+sudo: false
 language: node_js
-node_js:
-- '0.10'
-before_install:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
-env:
-  global:
-  - secure: "c13p96hzp54rRtR8eU+RBmXvuLuGUpTrD8fxJaEHTuPBe0gIZzwi8CqYE3yQqrFYU0EFsBvEQiHmslLVTTUvCcCW0ae8xk61RCJyge/6InQWldmJdXawgAeqwoRanfbAMr8tVfTO6T+9iESVcIOkPgWQ3CQb6/KizTe5937BNp4="
-  - secure: "NZXIAqpE9xk/6wKeSL5LLTO0DWE2MZoJ1dP7VWXBDklWfcM4mJS6yYf2/q7nnG1T+RqKQUGF//GOv9JPFmeQxP41UNIH7GwvCfIZSZGvRqZ1xAYmlijvVMWFw6o2WTw42OFu0GFvq5Gp+2ohIdrR4U47HSA0X/+JQYyM5wYDtYs="
-
+node_js: '4'
+cache:
+  directories: node_modules
+before_script: npm prune
+branches:
+  except: /^v\d+\.\d+\.\d+$/
 notifications:
   webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/df4440290bd89d941fb4
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: false     # default: false
-
+    urls: https://webhooks.gitter.im/e/df4440290bd89d941fb4
+    on_success: change
+    on_failure: always
+    on_start: false
+  email: false
 script: npm run test-ci
-
 addons:
-  sauce_connect:
-    username: ampersandjs-ci
-    access_key:
-      secure: "gd/90cxn7Z9li+nKDKTxuKizhCdL2LdRd1fiPuK8oEgRRNXAYnQzmY9Gw9DUjDPPsW5VtBWKdRcADJhzQcumTwGu34+m0GL7JK8H5Wcmu4JBlSP68kTXNOvONVe4jCwLZmllMV6fxiVDRxHAgCKniaOL1L+crn+zx5eBSDrTITQ="
-
+  sauce_connect: true
+env:
+  global:
+  - secure: cZNCzw3ho2G42vb2cdNtxy47o3vaVPnpKC2vYGQjCmGcU4T8iLDQcFZQbG48MFnRnj2k/9AsDXR/ov7JANF90iaqcQdtYgNwh2NJCuG64XqLck63BrTa1IBemTYvtDHZz3FjiNFWwpGTKZU8hmJADM8sVCW96mTTMFFUt4xHdbw=
+  - secure: dg3Yjj4FnEdXIJB4ddUIYV4HgnbZ2jT6VoSmebm1uTBheyUC+R2gmftvFyvovDFvCFlpnrNkgYou9gxK2VtQnKHCzWiZ3WLsePmApOxkIn3/7zbM9SUDf7XyVVSyOTygiYdvrg4Y0iL4BMAo8XZQ2IBcJ6YDORV4Z9TCdFpBxt4=
