--- a/.zuul.yml
+++ b/.zuul.yml
@@ -9,6 +9,6 @@ browsers:
   - name: ie
     version: 9..latest
   - name: iphone
-    version: 6.1
+    version: latest
   - name: android
-    version: 4.4
+    version: latest
